# straylight-divergence

./: .gitignore  .gitmodules  FurnitureCharacters  FurnitureCharacters.yaml  FurnitureLayouts  FurnitureLayouts.yaml  FurniturePrototypes  FurniturePrototypes.json  FurniturePrototypes.yaml  FurniturePrototypes~  README  lol.cabal  straylight-divergence.cabal  todo.txt
cbits/: AStar  AStar.c  AStar.h  TestAStar.c
design/: ExampleFurnitureLayouts.txt  another_possibility.txt  archetypes.txt  characters.txt  combat.txt  covert_action.txt  enemies.txt  foo.txt  furniture.txt  items.txt  mechanics.txt  morimoto.txt  objects.ods  objects.txt  objects:_another_way_to_win.thxt  pitch.txt  psychosis.txt  random.txt  simultaneous_turns.txt  slogans.txt
src/: AI.hs  AStarFFI.hs  Action.hs  BasicTypes.hs  CommonTypes.hs  Compound.hs  CursesWrap.hs  DataFile.hs  DataUtil.hs  Game.hs  Interface.hs  LocationMap.hs  Los.hs  Main.hs  MainLoop.hs  Object.hs  Rect.hs  RenderObject.hs  RenderToHtml.hs  SaveLoad.hs  TestAStar.hs  Text.hs  Tile.hs  Util.hs
src/Interface/: Menu.hs  TestMenu.hs
src/Mapgen/: .#furniture.txt  Campus.hs  CampusArgs.hs  FindRectangles.hs  Furniture.hs  FurnitureCharacters.hs  Rect.hs  RectTree.hs  Room.hs  Util.hs
text/: mind.txt  money.txt
