Name: straylight-divergence
Version: 0.0
Description: Straylight: Divergence, a science fiction roguelike
License: GPL
License-file: COPYING
Author: Ari Rahikkala
Maintainer: ari.rahikkala@gmail.com
Build-Type: Simple
Cabal-version: >= 1.2

Executable divergence
  Hs-source-dirs: src
  Main-is: Main.hs
  C-sources: cbits/astar-jps/IndexPriorityQueue.c cbits/astar-jps/AStar.c
  cc-options: -std=c99 -O2
  Ghc-options: -auto-all -rtsopts
  Build-Depends: base, data-accessor, data-accessor-template, random, mtl, hscurses, containers, array,  MonadRandom, fgl, vector-space, process, PSQueue, QuickCheck, MaybeT, astar, text, yaml-with-class, ghc-prim, bytestring, data-default
